# SableKOL

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.preflight  PLAN.md  README.md  TODO.md  pyproject.toml
deploy/: SIDECAR.md  migrate_kol_to_pg.py
deploy/jobs/: README.md  sable-kol-jobs.service  sable-kol-jobs.timer
deploy/regenerate/: README.md  sable-kol-regenerate@.service  sable-kol-regenerate@.timer
docs/: AUDIT_LOG.md  ENRICHMENT.md  PERSONAS.md  any_project_wizard_plan.md  network_graph_tufte_critique.md  sablekol_generalization_plan.md  sableweb_kol_build_plan.md  sableweb_kol_hetzner_deploy.md  sableweb_kol_network_plan.md  socialdata_contract_spike_2026_05_06.md  solstitch_phase2_phase3_results_2026_05_06.md
eval/: gold_set.yaml
sable_kol/: __init__.py  classify.py  cli.py  client_config.py  config.py  cost.py  cross_platform.py  crossref.py  curators.py  db.py  diagnostics.py  enrich.py  eval.py  filters.py  follow_graph.py  grok_api.py  grok_import.py  handle_verifier.py  ingest.py  jobs.py  match.py  network_axes.py  outreach_plan.py  persona_priming.py  preflight_schemas.py  preflight_service.py  profile.py  regenerate.py  reuse.py  socialdata_bulk.py  socialdata_live.py  wizard_orgs.py
scripts/: backfill_handle_verification.py  build_network_graph.py  build_outreach_plan.py  ingest_audiences.py  phase6_extract_followings.py  phase6b_tier_a_followings.py  socialdata_contract_spike.py
tests/: conftest.py  test_backfill_handle_verification.py  test_classify.py  test_client_config.py  test_cost.py  test_crossref.py  test_curators.py  test_db.py  test_diagnostics.py  test_enrich.py  test_follow_graph.py  test_grok_api.py  test_grok_import.py  test_ingest.py  test_jobs.py  test_match.py  test_network_axes.py  test_outreach_plan.py  test_persona_priming.py  test_preflight_cli.py  test_preflight_service.py  test_profile.py  test_socialdata_bulk.py  test_socialdata_live.py
tests/fixtures/: socialdata_followers_page.json
tests/integration/: test_eval_bank_coverage.py  test_eval_ranker_recall.py
