[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sable-kol"
version = "0.1.0"
description = "SableKOL — bank-backed KOL discovery and matching for Sable clients/prospects"
requires-python = ">=3.11"
dependencies = [
    # sable-platform is a hard dep but pinned WITHOUT a source URL so
    # production installs don't break on operator-laptop file:/// paths.
    # Operator must pre-install sable-platform from the SablePlatform
    # checkout (or a published wheel). Standard local-dev workflow:
    #   pip install -e ../SablePlatform && pip install -e .
    "sable-platform",
    "anthropic>=0.40",
    "click>=8.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
# Slopper's pyproject declares name = "sable" (not sable-slopper).
# Required for --paid-enrich (SocialData calls via sable.shared.socialdata)
# and Phase 2 watchlist sync (sable.pulse.meta.watchlist).
# Bare name so it resolves against whichever sable install is in the venv.
paid-enrich = [
    "sable",
]

# Required for the preflight FastAPI sidecar (sable_kol.preflight_service).
# The sidecar's Dockerfile installs sable-kol[service]; the CLI install does
# NOT pull these in by default (they're a multi-MB dep set the CLI doesn't
# need). Tests using TestClient pytest.importorskip this extra.
#
# psycopg2-binary is included so the sidecar can write to prod Postgres
# when invoked via `docker compose exec sable-kol-preflight sable-kol
# bulk-fetch ...`. SQLAlchemy 2.x defaults to psycopg2 when given a plain
# `postgresql://` URL, which is what /opt/sable-web/.env carries. Without
# this, every CLI command that touches the DB raises
# `ModuleNotFoundError: No module named 'psycopg2'` inside the container.
service = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "psycopg2-binary>=2.9",
]

[project.scripts]
sable-kol = "sable_kol.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sable_kol*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
